# agent-eval

./: .gitignore  CONTRIBUTING.md  LICENSE  pyproject.toml  readme.md  tool.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  publish.yml
src/localduck/: __init__.py  __main__.py  config.py  git.py  runner.py  types.py
src/localduck/agents/: __init__.py  base.py  copilot.py  detect.py  manual.py
src/localduck/cli/: __init__.py  setup.py  uninstall.py
src/localduck/hooks/: install.py
src/localduck/reports/: generate.py
src/localduck/reports/templates/: report.html.j2  report.md.j2
src/localduck/scanner/: batcher.py  cache.py  dedup.py  embedder.py  filter.py  pipeline.py
